# Sysy2022-bjtu

./: .out  CMakeLists.txt  README.md  a.s  main.cpp  quickSort.s  tempDocument.txt.txt
Lexer/: doc.txt  file.txt  lex.yy.cpp  lexical.lex  main.h  yacc.y
frontend/: FlexLexer.hh  Makefile  a.sy  driver.cc  lexer.cc  lexer.ll  main  main.cc  parser.cc  parser.hh  parser.output  parser.yy  syntax_tree.cc  syntax_tree.hh
include/backend/: allocRegs.hh  codegen.hh  instr.hh  reg.hh
include/errors/: errors.hh
include/frontend/: BasicBlock.hh  CompileUnit.hh  FlexLexer.h  FlexLexer.hh  Function.hh  IRManager.hh  Instruction.hh  IrVisitor.hh  Lin.hh  MIRBuilder.hh  OptimizeAdaptor.hh  Value.hh  driver.hh  location.hh  parser.hh  syntax_tree.hh
include/optimize/: BeforeSSAOptimize.hh  DominateTree.hh  Mem2reg.hh
src/backend/: allocRegs.cc  codegen.cc
src/errors/: errors.hh
src/frontend/: CMakeLists.txt  IrVisitor.cc  MIRBuilder.cc  Value.cc  driver.cc  lexer.cc  parser.cc  syntax_tree.cc
test/: 35_array_test.sy  80_lcm.sy  88_array_concat.sy  94_matrix_mul.sy  lin1.sy  quickSort.sy  test.sy  test1.sy
